--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
     - "3.2"
     - "3.3"
 script:
-    - python setup.py nosetests\w
+    - python setup.py nosetests
 branches:
     only:
         - master
