--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ with-spec=1
 spec-color=1
 
 with-coverage=1
-cover-package=flask_via
+cover-package=./flask_via
 cover-erase=1
 cover-html=1
 cover-html-dir=./htmlcov
