--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,6 @@
-[nosetests]
-verbosity=0
-
-with-spec=1
-spec-color=1
-
-with-coverage=1
-cover-package=./flask_via
-cover-erase=1
-cover-inclusive=1
-
-tests=tests
+[pytest]
+addopts =
+    --spec
+    --cov flask_via
+    --cov-config .coveragerc
+    --cov-report term-missing
